# bbmri-fp-etl

./: .gitignore  README.md  pyproject.toml
bbmri_fp_converter/: converter.py  serializer.py
bbmri_fp_converter/destinations/: __init__.py  fhir.py  omop.py
bbmri_fp_etl/: converter.py  models.py  serializer.py  sources.py
bbmri_fp_etl/destinations/: __init__.py  fhir.py  omop.py
bbmri_fp_etl/destinations/resources/: __init__.py  condition.py
bbmri_fp_etl/sources/: __init__.py
examples/: example_source.py
