[tool.poetry]
name = "bbmri-fp-etl"
version = "0.1.0"
description = """
A framework to support the implementation of tools to read and convert data
about biomedical samples into formats compatible with the BBMRI Federated
Platform (i.e., FHIR Resources and OMOP).
"""
authors = [
    "Vittorio Meloni <vittorio.meloni@crs4.it>",
    "Alessandro Sulis <alessandro.sulis@crs4.it>",
    "Giovanni Delussu <giovanni.delussu@crs4.it>"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"
isodate = "^0.6.1"
fhirclient = "^4.3.0"
PyYAML = "^6.0"
typing-extensions = "^4.1.1"
roman = "^4.2"
pydantic = "^2.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
